fix modal spacing, fix break on laptops, decrease shocase flex gap

--- a/styles.css
+++ b/styles.css
@@ -500,7 +500,7 @@ h3 {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  gap: 10%;
+  gap: 5%;
   animation: fadeInFromBelow 1s ease-in-out 1.5s forwards;
   -webkit-animation: fadeInFromBelow 1s ease-in-out 1.5s forwards; /* Safari and Chrome */
   -moz-animation: fadeInFromBelow 1s ease-in-out 1.5s forwards; /* Firefox */
@@ -522,7 +522,7 @@ h3 {
 }
 
 .carousel {
-  width: 45%;
+  width: 50%;
   display: flex;
   flex-direction: column;
   justify-content: center;
